# compIQ

./: .gitignore  Makefile  README.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  seed_admin.py
backend/app/: config.py  db.py  main.py
backend/app/migrations/: 001_init.sql  002_api_cache.sql  003_users.sql  004_comp_property_type.sql
backend/app/models/: comp.py  property.py  report.py
backend/app/routes/: analysis.py  auth.py  export.py  stripe.py
backend/app/services/: comps.py  markets.py  narrative.py  rentcast.py
backend/scripts/: backtest.py
backend/seed/: sample_data.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AdjustmentsBreakdown.tsx  CompsTable.tsx  Layout.tsx  MarketStats.tsx  NarrativeReport.tsx  PriceRange.tsx  PropertyForm.tsx
frontend/src/lib/: tier.ts
frontend/src/pages/: BatchPage.tsx  HomePage.tsx  LandingPage.tsx  PDFReportPage.tsx  ReportPage.tsx
frontend/src/stores/: analysisStore.ts
frontend/src/styles/: globals.css
